--- a/online_shop/src/pages/cart/style.css
+++ b/online_shop/src/pages/cart/style.css
@@ -7,6 +7,7 @@
 .product-in-cart{ 
     display: flex;
     justify-content: space-between;
+    align-items: center;
     width: 100vw; 
     position: relative;
     gap: 2rem;
@@ -24,6 +25,7 @@
     justify-content: center;
     align-items: center;
     position: absolute; 
-    right: 15%
+    right: 25%
 
 }
+
