trying to modify values

--- a/online_shop/src/pages/admin/style.css
+++ b/online_shop/src/pages/admin/style.css
@@ -37,3 +37,16 @@
     height: 75px;
 
 }
+.table-container{ 
+    
+}
+
+#edit-product{ 
+    display: none;
+
+}
+
+#add-product{ 
+    display: none;
+
+}
