--- a/online_shop/src/pages/details/style.css
+++ b/online_shop/src/pages/details/style.css
@@ -1,8 +1,163 @@
-.message{ 
-    display: none;
-    position: absolute;
-    top: 0%; 
-    left: 50%; 
-    transform: translate(-50%);
-    z-index: 2;
+:root {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Prompt", sans-serif;
+}
+
+.navbar {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  position: sticky;
+  top: 0;
+  background-color: white;
+  z-index: 1;
+  width: 95%;
+  margin: 0 auto;
+  border-bottom: 2px solid orange;
+  padding: 0;
+}
+
+.logo {
+  font-family: "Pacifico", cursive;
+  color: orange;
+  margin-bottom: 0;
+  margin-top: 0;
+}
+
+.links {
+  display: flex;
+  gap: 2rem;
+  font-size: 1.2rem;
+  font-weight: 700;
+}
+.links a {
+  color: black;
+  text-decoration: none;
+  transition: 0.2s;
+}
+.links a:hover {
+  color: orange;
+  border-bottom: 3px solid orange;
+}
+
+.cart-by-id {
+  position: absolute;
+  display: flex;
+  flex-direction: row;
+
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  border: none;
+  gap: 2rem;
+  width: 60%;
+}
+
+.cart-by-id img {
+  width: 90%;
+  border-radius: 1rem;
+  transition: 0.3s;
+}
+
+.cart-by-id:hover img {
+  box-shadow: 5px 8px 12px orange;
+}
+
+.message {
+  display: none;
+  position: absolute;
+  top: 0%;
+  left: 50%;
+  transform: translate(-50%);
+  z-index: 2;
+}
+
+.cart-shopping-detail {
+  border: none;
+  display: flex;
+  flex-direction: column;
+  justify-content: top;
+  position: relative;
+}
+
+.product-name {
+  font-size: 2rem;
+  font-weight: 700;
+  margin-bottom: 10px;
+  color: orange;
+}
+
+.price-stock {
+
+  bottom: 20%;
+}
+
+.cart-by-id .product-description {
+  display: none;
+  font-weight: 400;
+  font-size: 1rem;
+  margin: 0;
+}
+
+.product-price {
+  font-weight: bold;
+  margin: 0;
+  justify-self: end;
+}
+
+.product-disponibility {
+  margin: 0;
+}
+
+.add-to-cart {
+  margin-top: 1rem;
+  padding: 0.5rem 1rem;
+  font-size: 1rem;
+  font-weight: 700;
+  background-color: transparent;
+  border: 2px solid orange;
+  border-radius: 5px;
+  color: orange;
+  transition: 0.22s;
+  cursor: pointer;
+  display: inline-block;
+}
+
+.add-to-cart:hover {
+  background-color: orange;
+  color: white;
+}
+
+.message {
+  background-color: rgba(146, 248, 189, 0.605);
+
+  width: 100vw;
+  text-align: center;
+}
+@media (max-width: 1450px) and (min-width: 1100px) {
+  .cart-by-id {
+    width: 80%;
+    flex-direction: row;
+  }
+  .cart-by-id img {
+    width: 60%;
+  }
+}
+
+@media (max-width: 1100px) and (min-width: 400px) {
+  .cart-by-id {
+    top: 60%;
+    width: 40%;
+    flex-direction: column;
+    gap: 1rem;
+  }
+  .price-stock {
+    position: static;
+  }
+
+  .product-name {
+    margin-top: 0;
+  }
 }
