--- a/online_shop/style.css
+++ b/online_shop/style.css
@@ -1,108 +1,183 @@
 :root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
-
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  -webkit-text-size-adjust: 100%;
-}
-
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
-}
-
-body {
   margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Prompt", sans-serif;
+}
+
+body{ 
+  width: 100vw; 
+  
+}
+
+#container {
   display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
-}
-
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
-}
-
-#app {
-  max-width: 1280px;
+  flex-direction: column;
+  padding: 1rem;
+  gap: 2rem;
+  justify-content: center;
+  align-items: center;
+  width: 1250px;
   margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+
+}
+
+/* Navbar */
+
+.navbar {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  position: sticky;
+  top: 0;
+  background-color: white;
+  z-index: 1;
+  width: 95%;
+  margin: 0 auto;
+  border-bottom: 2px solid orange; 
+  padding: 0; 
+  
 }
 
 .logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.vanilla:hover {
-  filter: drop-shadow(0 0 2em #f7df1eaa);
+  font-family: "Pacifico", cursive;
+  color: orange;
+  margin-bottom: 0;
+  margin-top: 0; 
 }
 
-.card {
-  padding: 2em;
+.links {
+  display: flex;
+  gap: 2rem;
+  font-size: 1.2rem;
+  font-weight: 700;
+  
+  
+}
+.links a {
+  color: black;
+  text-decoration: none;
+  transition: 0.2s;
+}
+.links a:hover {
+  color: orange;
+  border-bottom: 3px solid orange;
 }
 
-.read-the-docs {
-  color: #888;
+.banner {
+  width: 100%;
+  height: 50%;
+  margin: 0 auto;
 }
 
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
+.carts-container {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr ;
+  column-gap: 1.6rem;
+  row-gap: 2rem;
+  width: 100%;
+  outline: none;
 }
 
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
-}
-
-
-.carts-container{ 
-  display: grid; 
-  grid-template-columns: 1fr 1fr 1fr;
-  gap: 2rem; 
-  position: relative; 
-  width: 100vw;
-  justify-items: center;
+.carts-container .cart {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
  
+ 
+
 }
+.carts-container .cart:hover img{
+    
+ box-shadow: 5px 8px 12px orange;
+
+}
+
+.carts-container .cart img {
+  object-fit: cover;
+  border-radius: 1rem;
+  transition: 0.3s; 
+  
+}
+
+.carts-container .cart .details-container{
+   display: flex;
+   flex-direction: column;
+    justify-content: start;
+    position: relative; 
+    
+
+  
+}
+ .product-name{ 
+  margin : 10px 0 5px 0; 
+  font-weight: 700;
+
+  font-size: 1.2rem;
+}
+.product-price{
+  margin-top: 0; 
+  
+}
+
+.lock{ 
+  color: black; 
+  font-size: 1.4rem;
+  padding:15px 11px 10px 10px; 
+  border-radius: 50%;
+  
+  background-color: rgba(128, 128, 128, 0.434);
+  top: 15%; 
+  right: 5%; 
+  transition: 0.22s;
+}
+
+.lock:hover { 
+  color: orange; 
+  background-color: white;
+  border: 1px solid orange; 
+
+}
+
+.price-and-add{ 
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-top: 0.5rem;
+}
+
+@media (max-width: 1400px) and (min-width: 500px) {
+  
+  #conatiner{ 
+    width: 900px;
+  }
+ 
+  .carts-container {
+    grid-template-columns: 1fr 1fr 1fr;
+  }
+
+  .banner {
+    width: 100%;
+    height: 50%;
+  }
+}
+
+@media (max-width: 500px) {
+  .carts-container {
+    grid-template-columns: 1fr 1fr  ;
+    column-gap: 2rem;
+    row-gap: 2rem;
+  }
+
+  .carts-container .cart {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+}
+
+.carts-container .cart img { 
+  width: 100%; 
+}
+}
+
+
